# artid

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  makefile
.githooks/: pre-commit
.github/: CONTRIBUTING.md
UI/cli/: Cargo.toml  README.md
UI/cli/src/: errors.rs  main.rs  parser.rs
UI/cli/src/ops/: backup.rs  mod.rs  restore.rs
crates/env_path/: Cargo.toml
crates/env_path/src/: lib.rs
crates/env_path/tests/: serde.rs
debug/backup/.backup/: config.json
debug/restore/: c.txt  d.txt
scripts/: ci.sh  config.sh
src/: cli.yml  errors.rs  fs.rs  lib.rs  logger.rs  main.rs  parser.rs  sync.rs  tools.rs
src/actions/: backup.rs  mod.rs
src/cli/: errors.rs  main.rs  parser.rs
src/cli/ops/: backup.rs  restore.rs
src/core/: Cargo.toml  debug_closure.rs  errors.rs  fn_box.rs  lib.rs  tools.rs
src/core/config/: archive.rs  errors.rs  mod.rs
src/core/ops/: backup.rs  mod.rs  restore.rs  test_helpers.rs
src/core/ops/core/: errors.rs  mod.rs  model.rs  tree.rs
src/core/ops/core/filesystem/: archive.rs  local.rs  mod.rs
src/core/src/: lib.rs  sync.rs  tools.rs
src/core/src/config/: errors.rs  mod.rs
src/core/src/config/ops/: backup.rs  errors.rs  restore.rs
src/core/src/ops/: backup.rs  mod.rs  restore.rs  test_helpers.rs
src/core/src/ops/core/: mod.rs  model.rs  tree.rs
src/core/src/ops/core/filesystem/: local.rs  mod.rs
src/core/tests/: configfile.rs
src/crates/debug_closure/: Cargo.toml
src/crates/debug_closure/src/: lib.rs
src/crates/env_path/: Cargo.toml
src/crates/env_path/tests/: eq.rs  serde.rs
src/crates/fn_box/: Cargo.toml
src/crates/fn_box/src/: lib.rs
src/errors/: either.rs  helpers.rs  mod.rs  print.rs
src/fs/: backup.rs  mod.rs
src/lib/: lib.rs  logger.rs  sync.rs
src/lib/config/: errors.rs  mod.rs
src/lib/config/ops/: backup.rs  errors.rs
src/lib/errors/: mod.rs
src/lib/ops/: backup.rs  errors.rs  mod.rs  restore.rs
src/logger/: Cargo.toml  term.rs
src/logger/src/: lib.rs
src/sync/: helpers.rs  mod.rs
tests/: configfile.rs
tests/files/: single_folder.toml  single_folder_origin_creation.toml  single_folder_snapshot.toml
