[workspace]
members = [
    "crates/env_path",
    "src/core",
    "src/logger"
]

[package]
name = "artid"
version = "0.2.1"
authors = ["Gabriel Dos Ramos Albo <dosramosgabriel@gmail.com>"]
description = "Light client to backup your data"

[[bin]]
name = "artid"
path = "src/cli/main.rs"

[dependencies]
artid-core = {path = "src/core"}
artid-logger = {path = "src/logger"}

chrono = {version = "0.4.5"}
clap = {version = "~2.32.0", features = ["yaml"]}
failure = "0.1.2"
failure_derive = "0.1.2"
libc = "0.2.43"
log = "0.4.3"