[package]
name = "env_path"
version = "0.1.0"
authors = ["Gabriel Dos Ramos Albo <dosramosgabriel@gmail.com>"]

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
lazy_static = "1.0"
regex = "0.2"
serde = {version = "1.0.71", optional = true}

[dev-dependencies]
serde_derive = "1.0.71"
serde_json = "1.0.24"

[features]
all = ["serde"]