[package]
name = "artid-core"
version = "0.1.0"
authors = ["Gabriel Dos Ramos Albo <dosramosgabriel@gmail.com>"]
edition = "2018"

[dependencies]
env_path = {path = "../../crates/env_path", features = ["serde"]}

chrono = {version = "0.4.5", features = ["serde"]}
failure = "0.1.2"
failure_derive = "0.1.2"
log = "0.4.3"
serde = "1.0.71"
serde_derive = "1.0.71"
json = {package = "serde_json", version = "1.0.24"}

[dev-dependencies]
tempfile = "3.0.3"